tests/errors/ref_misspelled_var.js
let username = "Alice";
console.log(usernme);
